hero button spacing fix

--- a/src/layouts/child-fix.scss
+++ b/src/layouts/child-fix.scss
@@ -148,3 +148,7 @@
 .logo {
   height: 7ex;
 }
+
+.hero-banner .btn-group {
+  margin:10px;
+}
